--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,9 +19,9 @@ body {
 }
 
 body {
-  background-image: url('https://c4.wallpaperflare.com/wallpaper/117/546/489/anime-original-book-boy-wallpaper-preview.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  /* background-image: url('https://c4.wallpaperflare.com/wallpaper/117/546/489/anime-original-book-boy-wallpaper-preview.jpg'); */
+  /* background-repeat: no-repeat; */
+  /* background-size: cover; */
   height: 100vh;
   align-items: center;
   display: flex;
